<?xml version="1.0"?>
<package format="2">
  <name>raspbot_gazebo</name>
  <version>0.0.0</version>
  <description>The raspbot_gazebo package</description>

    <maintainer email="plain@todo.todo">plain</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/plainchan/RaspBot.git</url>

  <author email="plain@example.com">plain</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
