<?xml version="1.0"?>
<package format="2">
  <name>raspbot_gps</name>
  <version>0.0.0</version>
  <description>The raspbot_gps package</description>

  <maintainer email="plain@todo.todo">plain</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/plainchan/RaspBot.git</url>

  <author email="plain@example.com">plain</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nmea_navsat_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>nmea_navsat_driver</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
