<?xml version="1.0"?>
<package format="2">
  <name>raspbot_navigation</name>
  <version>0.0.0</version>
  <description>The raspbot_navigation package</description>

  <maintainer email="plain@todo.todo">plain</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/plainchan/RaspBot.git</url>

  <author email="plain@example.com">plain</author>




  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>slam_gmapping</build_depend> -->
  <!-- <build_depend>hector_slam</build_depend> -->
  <build_depend>map_server</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <!-- <build_export_depend>slam_gmapping</build_export_depend> -->
  <!-- <build_export_depend>hector_slam</build_export_depend> -->
  <build_export_depend>map_server</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <!-- <exec_depend>slam_gmapping</exec_depend> -->
  <!-- <exec_depend>hector_slam</exec_depend> -->
  <exec_depend>map_server</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
